opam-version: "2.0"
name: "ppx_pbt"
version: "0.1.0"
license: "MIT"
synopsis: "PPX Rewriter for property based testing"

homepage: "https://gitlab.com/vch9/ppx_pbt"
bug-reports: "https://gitlab.com/vch9/ppx_pbt/-/issues"

maintainer: [
  "Valentin Chaboche <valentin.chaboche@nomadic-labs.com>"
]

authors: [
 "Valentin Chaboche <valentin.chaboche@nomadic-labs.com>"
]

depends: [
  "dune" {>= "2.8.0"}
  "menhir" {>= "20180523"}
  "ocaml" {>= "4.10.2"}
  "qcheck" {>= "0.17"}
  "metaquot" {>= "0.4"}
  "data-encoding"
  "zarith"
]

build: ["dune" "build" "-p" name "-j" jobs]


dev-repo: "git+https://gitlab.com/vch9/ppx_pbt.git"
