(library
 (name ppx_pbt)
 (public_name ppx_pbt)
 (kind ppx_rewriter)
 (libraries ppxlib menhirLib qcheck common test)
 (ppx_runtime_libraries ppx_pbt.pbt ppx_pbt.runner)
 (preprocess (pps ppxlib.metaquot))
 (inline_tests.backend
  (generate_runner (echo "let () =  Runner.run () ;;"))
  (runner_libraries qcheck ppx_pbt.runner)))
