(executable
 (name pp)
 (modules pp)
 (libraries ppxlib qbc))

(rule
 (targets test.actual.ml)
 (deps (:pp pp.exe) (:input test.ml))
 (action (run ./%{pp} --impl %{input} -o %{targets})))

(rule
 (targets test.expected.format.ml)
 (deps (:pp pp.exe) (:input test.expected.ml))
 (action (run ./%{pp} --impl %{input} -o %{targets})))

(rule
 (alias runtest)
 (action (diff test.expected.format.ml test.actual.ml)))

(test
 (name test)
 (modules test)
 (libraries data-encoding zarith qcheck)
 (preprocess (pps qbc)))
